--- a/app/manifest.json
+++ b/app/manifest.json
@@ -5,6 +5,8 @@
   "description": "__MSG_appDescription__",
   "icons": {
     "16": "images/icon-16.png",
+    "19": "images/icon-19.png",
+    "38": "images/icon-38.png",
     "128": "images/icon-128.png"
   },
   "default_locale": "en",
@@ -17,8 +19,10 @@
   "permissions": [],
   "page_action": {
     "default_icon": {
+      "16": "images/icon-16.png",
       "19": "images/icon-19.png",
-      "38": "images/icon-38.png"
+      "38": "images/icon-38.png",
+      "128": "images/icon-128.png"
     },
     "default_title": "Stack Block",
     "default_popup": "popup.html"
