--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "__MSG_appName__",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "manifest_version": 2,
   "description": "__MSG_appDescription__",
   "icons": {
@@ -16,7 +16,10 @@
       "scripts/background.js"
     ]
   },
-  "permissions": [],
+  "permissions": [
+    "*://stackoverflow.com/*",
+    "*://*.stackexchange.com/*"
+  ],
   "page_action": {
     "default_icon": {
       "16": "images/icon-16.png",
@@ -30,9 +33,8 @@
   "content_scripts": [
     {
       "matches": [
-        "http://stackoverflow.com/*",
-        "http://*.stackexchange.com/*",
-        "https://*/*"
+        "*://stackoverflow.com/*",
+        "*://*.stackexchange.com/*"
       ],
       "js": [
         "bower_components/jquery/dist/jquery.js",
